--- a/android/build.gradle
+++ b/android/build.gradle
@@ -4,6 +4,18 @@ allprojects {
         mavenCentral()
     }
 }
+buildscript {
+    ext.kotlin_version = '1.8.0' // atau versi yang sesuai
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        // dependensi lainnya
+    }
+}
+
 
 rootProject.buildDir = "../build"
 subprojects {
